Archive2/75/db3ddf603fd5d0/output
main.cpp: In constructor 'Rectangle::Rectangle(int, int)':
main.cpp:24:13: error: statement has no effect [-Werror=unused-value]
     itsWidth;
             ^
main.cpp:25:14: error: statement has no effect [-Werror=unused-value]
     itsHeight;
              ^
main.cpp: At global scope:
main.cpp:22:26: error: unused parameter 'width' [-Werror=unused-parameter]
 Rectangle::Rectangle(int width, int height)
                          ^
main.cpp:22:37: error: unused parameter 'height' [-Werror=unused-parameter]
 Rectangle::Rectangle(int width, int height)
                                     ^
cc1plus: all warnings being treated as errors
